refactor -> DDD